Fix overflow on catalog and form pages

--- a/source/sass/blocks/page-form.scss
+++ b/source/sass/blocks/page-form.scss
@@ -1,3 +1,3 @@
-.page-catalog {
+.page-form {
   overflow-x: hidden;
 }
